fixed spacing of title

--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,7 @@
 .main-container .about{
 	height: 100%;
 	width: 100%;
-	padding: 0rem 2rem 0rem 2rem;
+	padding: 2rem 1rem 4rem 1rem;
 	display: flex;
 	flex-direction: column;
 	justify-content:center;
@@ -22,6 +22,7 @@
 .main-container .about p{
 	color: gray;
 	font-size: 1.6rem;
+	max-width: 850px;
 }
 .main-container .about h2{
 	padding-top: 2rem;
@@ -32,11 +33,6 @@
 	font-weight: 200;
 }
 
-@media screen and (min-width: 1161px){
-	.main-container .about{
-	padding: 8rem 15rem 4rem 15rem;
-	}
-}
 @media screen and (max-width: 678px){
 	.main-container .about h1{
 		font-size: 3rem;
